--- a/Seminar1/.project
+++ b/Seminar1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Seminar1</name>
+	<name>Seminarii</name>
 	<comment></comment>
 	<projects>
 	</projects>
